--- a/qls/html/form.css
+++ b/qls/html/form.css
@@ -10,7 +10,7 @@ font:sans-serif;
  }
 table
 {
-color:blue;
+color:green;
 margin:auto;
 text-align:left;      
 border: 1px solid #D7E5F2;    
@@ -28,6 +28,7 @@ padding:6px;
 legend {
   padding: 5px;
   color:purple;
-  font-size: 14px
-  text-align:right;
+  font-size: 20px;
+  font-style:bold;
+  text-align:left;
   }
