--- a/qls/includes/head.css
+++ b/qls/includes/head.css
@@ -5,20 +5,22 @@ margin: 0;
 }
 .header
 {
+top:0;
 width:100%;
 height:100px;
 background:#666; 
 }
 #navigation 
 {
- top:100px;
+  top:100px;
   width: 100%;
   background-color:#B49AA9;
   height: 30px;
   text-align: center;
-  padding-top: 15px;
-  padding-left: 40px;
+  padding-top: 5px;
+  //padding-left: 40px;
 }
+
 #navigation a {
 	font-style:bold;
 	font-size: 18px;
